--- a/foundations/intro-to-css/02-class-id-selectors/style.css
+++ b/foundations/intro-to-css/02-class-id-selectors/style.css
@@ -1,1 +1,15 @@
 /* Add CSS Styling */
+.odd-num {
+    background-color:#ffc0cb;
+    font-family:Verdana,"Dejavu Sans",sans-serif;
+}
+#second {
+    color:hsl(240, 100%, 50%);
+    font-size:36px;
+}
+#fourth {
+    background-color:#7fffd4;
+    font-weight:bold;
+    font-size:24px;
+    
+}
