--- a/foundations/intro-to-css/03-grouping-selectors/style.css
+++ b/foundations/intro-to-css/03-grouping-selectors/style.css
@@ -1,1 +1,13 @@
 /* Add CSS Styling */
+.first,
+.second {
+    font-size:28px;
+    font-family:Helvetica,"Times New Roman",sans-serify;
+}
+.first {
+    background-color:black;
+    color:white;
+}
+.second {
+    background-color:yellow;
+}
