--- a/foundations/block-and-inline/02-margin-and-padding-2/style.css
+++ b/foundations/block-and-inline/02-margin-and-padding-2/style.css
@@ -1,27 +1,43 @@
 body {
   background: #eee;
   font-family: sans-serif;
+  
 }
+
 
 .card {
   width: 400px;
   background: #fff;
-  margin: 16px auto;
+  /*margin: 16px auto;*/
 }
 
 .title {
   background: #e3f4ff;
+  padding:10px;
+  margin-bottom: 10px;
 }
 
 .content {
   background: #e3f4ff;
+  margin-bottom: 10px;
+  padding:16px 10px;
 }
 
 .button-container {
+  text-align:center;
   background: #e3f4ff;
+  padding:10px;
 }
 
 button {
+  display:block;
+  padding:10px;
   background: white;
   border: 1px solid #eee;
+  width:150.494px;
+  margin:0 auto;
+}
+
+* {
+  font-size:16px;
 }
