--- a/foundations/flex/02-flex-header/style.css
+++ b/foundations/flex/02-flex-header/style.css
@@ -1,6 +1,15 @@
+
 .header  {
+  padding:8px;
   font-family: monospace;
   background: papayawhip;
+  display:flex;
+  flex-direction: row;
+  align-items: center;
+  flex:auto;
+  justify-content: space-between;
+  
+
 }
 
 .logo {
@@ -9,13 +18,19 @@
   color: tomato;
   background: white;
   padding: 4px 32px;
+  justify-content: center;
 }
 
 ul {
   /* this removes the dots on the list items*/
   list-style-type: none;
+  display:flex;
+  flex-direction: row;
+  gap:8px;
+  padding:0;
 }
 
+  
 a {
   font-size: 22px;
   background: white;
