--- a/foundations/flex/03-flex-header-2/style.css
+++ b/foundations/flex/03-flex-header-2/style.css
@@ -6,13 +6,27 @@ body {
   margin: 0;
   background: #eee;
   font-family: Besley, serif;
+  
 }
 
 .header {
   background: white;
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
+  display:flex;
+  align-items: center;
+  justify-content: space-between;
+  padding:8px;
 }
+.group1 {
+  display:flex;
+  gap:16px;
+}
+.group2 {
+  display:flex;
+  gap:16px;
+}
+
 
 .profile-image {
   background: rebeccapurple;
@@ -45,4 +59,7 @@ a {
 
 ul {
   list-style-type: none;
+  display: flex;
+  padding:0;
+  gap:16px;
 }
