--- a/foundations/flex/04-flex-information/style.css
+++ b/foundations/flex/04-flex-information/style.css
@@ -1,7 +1,29 @@
 body {
   font-family: 'Courier New', Courier, monospace;
+  display:flex;
+  flex-direction: column;
+  align-items: center;
+  gap:32px;
 }
+.content {
+  display:flex;
+  flex-direction:row;
+  flex-wrap: wrap;
+  gap:52px;
+  
 
+}
+.group {
+  display:flex;
+  flex-direction: column;
+  width:200px;
+  align-items: center;
+}
+.text {
+  display:flex;
+  flex-wrap: wrap;
+  text-align: center;
+}
 img {
   width: 100px;
   height: 100px;
