--- a/foundations/flex/06-flex-layout/style.css
+++ b/foundations/flex/06-flex-layout/style.css
@@ -16,6 +16,15 @@ button {
   border: none;
   border-radius: 8px;
   background: #eee;
+  padding:10px;
+  /*display:flex;
+  flex-direction: row;
+  gap:5px;*/
+}
+.buttons{
+  display:flex;
+  flex-direction: row;
+  gap:5px;
 }
 
 input {
@@ -23,4 +32,51 @@ input {
   border-radius: 16px;
   padding: 8px 24px;
   width: 400px;
+}
+ul {
+  list-style-type:none;
+  margin:0;
+  padding:0;
+
+}
+.header {
+  display:flex;
+  justify-content: space-between;
+  align-items: flex-start;
+  padding:20px;
+}
+.left-links {
+  display:flex;
+  flex-wrap: wrap;
+  
+  gap:10px;
+}
+.right-links {
+  display:flex;
+  flex-wrap:wrap-reverse;
+  
+  gap:10px;
+}
+.footer {
+  display:flex;
+  justify-content: space-between;
+  align-items:flex-end;
+  padding:20px;
+  background-color:#eeeeee;
+}
+.content{
+  display:flex;
+  flex-direction:column;
+  align-items: center;
+  justify-content: center;
+  gap:20px;
+}
+body {
+  display:flex;
+  flex-direction: column;
+  justify-content:space-between;
+}
+a {
+  color:gray;
+  text-decoration:none;
 }
