--- a/foundations/flex/07-flex-layout-2/style.css
+++ b/foundations/flex/07-flex-layout-2/style.css
@@ -2,28 +2,90 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   margin: 0;
   min-height: 100vh;
+  display:flex;
+  flex-direction: column;
+  /*align-items: stretch;*/
+  flex-grow:1;
+  
 }
 
 .header {
   height: 72px;
   background: darkmagenta;
   color: white;
+  display:flex;
+  justify-content: flex-start;
+  align-items:center;
+  font-size: 32px;
+  font-weight: 900;
+  padding-left:16px;
+  flex-grow:0;
+  
 }
 
 .footer {
   height: 72px;
   background: #eee;
   color: darkmagenta;
+  display:flex;
+  justify-content: center;
+  align-items:center;
+  flex-grow:0;
 }
 
 .sidebar {
   width: 300px;
+  display: flex;
+  flex-shrink: 0;
   background: royalblue;
   box-sizing: border-box;
+  padding:16px;
+}
+.cards {
+  display:flex;
+  flex-wrap:wrap;
+  
+  padding:48px;
+  justify-content: flex-start;
+  gap:30px;
+  flex-shrink: 1;
+  
+
 }
 
 .card {
   border: 1px solid #eee;
   box-shadow: 2px 4px 16px rgba(0,0,0,.06);
   border-radius: 4px;
+  width:320px;
+  
+  padding:10px;
+  box-sizing:border-box;
+}
+
+.content{
+  display:flex;
+  flex-grow:1
+  
+}
+a {
+  color:white;
+  text-decoration:none;
+}
+ul {
+  list-style-type:none;
+  font-size:25px;
+  padding:0;
+  margin:0;
+  display:flex;
+  flex-direction: column;
+  gap:20px;
+  
+}
+.sidebar {
+  display:flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: flex-start;
+  padding:16px;  
 }
